--- a/projects/shell/src/index.html
+++ b/projects/shell/src/index.html
@@ -9,5 +9,16 @@
 </head>
 <body>
   <app-root></app-root>
+  <script>
+    // Set the base URL for assets dynamically
+    if (window.location.hostname === 'localhost') {
+      window.__MF_ASSET_PATH__ = 'http://localhost:4204/';  // Local development
+    } else {
+      window.__MF_ASSET_PATH__ = 'https://cdn.example.com/';  // Production CDN
+    }
+
+    // Optionally, you can log or debug the asset path
+    console.log("Asset Path: ", window.__MF_ASSET_PATH__);
+  </script>
 </body>
 </html>
